Replace Guava's `ImmutableMap.of()` with Java 17's `Map.of()`.